# log-analytics-engine

./: .coverage  .env.example  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py
api/core/: config.py  elasticsearch.py
api/routes/: logs.py  stream.py
api/schemas/: logs.py
docs/: design-doc-log-analytics.docx  postmortem.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: logs.ts
frontend/src/components/: LiveTail.tsx  LogTable.tsx  ServiceGrid.tsx
frontend/src/hooks/: useLogStream.ts
infra/: artifact_registry.tf  cloud_run.tf  database.tf  main.tf  outputs.tf  variables.tf
ingestion/consumers/: log_consumer.py
ingestion/producers/: log_producer.py
ingestion/schemas/: log_event.avsc
ml/evaluation/: evaluate.py
ml/features/: feature_engineering.py
ml/models/: isolation_forest.pkl  predict.py  scaler.pkl  threshold.json  train.py
processing/indexer/: es_index.py
tests/integration/: test_pipeline.py
tests/unit/: test_api_routes.py  test_config_and_coverage.py  test_feature_engineering.py  test_log_producer.py  test_ml_training.py
